--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
     margin: 10px 0 20px;
 }
 
-.bio{
+/* .bio{
     float: left;
     background-color: #D9D9D9;
     border: 2px solid white;
@@ -26,7 +26,7 @@
     margin-top: 50px;
     height: 320px;
     width: 220px;
-}
+} */
 
 .button{
     color: white;
@@ -34,7 +34,7 @@
     text-decoration-color: white;
 }
 
-/* textarea{
+#bio{
     float: left;
     background-color: #D9D9D9;
     border: 2px solid white;
@@ -43,7 +43,7 @@
     height: 320px;
     width: 220px;
     resize: none;
-} */
+}
 nav.bg-white.border-gray-200.py-2\.5 {
     background-color: rgb(167, 58, 58);
 }
@@ -151,4 +151,4 @@ h3.text-5xl{
 }
 Div h1{
     /* border: 1px solid red; */
-} 
+}
