--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.Div {
+/* .Div {
     background-color: white;
     border-radius: 25px;
     border: 2px solid white;
@@ -18,23 +18,13 @@
     margin: 10px 0 20px;
 }
 
-/* .bio{
-    float: left;
-    background-color: #D9D9D9;
-    border: 2px solid white;
-    padding: 20px;
-    margin-top: 50px;
-    height: 320px;
-    width: 220px;
-} */
-
 .button{
     color: white;
     text-decoration: underline;
     text-decoration-color: white;
-}
+} */
 
-#bio{
+/* #bio{
     float: left;
     background-color: #D9D9D9;
     border: 2px solid white;
@@ -43,8 +33,8 @@
     height: 320px;
     width: 220px;
     resize: none;
-}
-nav.bg-white.border-gray-200.py-2\.5 {
+} */
+/* nav.bg-white.border-gray-200.py-2\.5 {
     background-color: rgb(167, 58, 58);
 }
 
@@ -87,7 +77,7 @@ div.content {
 h3.text-5xl{
   color: #924c4c;
   background-color: #ece2e2;
-}
+} */
 /* h4 {
   background-color: aqua;
   color: black;
