เพิ่มหน้า show profile in navbar and validate event name

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -139,3 +139,12 @@ h3.text-5xl{
     left: 420px;
     padding: 10px;
 }
+.centered-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 1000;
+    padding: 50px;
+}
