addjoinUser and addMember

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -56,7 +56,7 @@ div.void {
 }
 div.grid-1 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 40px;
     justify-items: center;
